RESOLVED FIXED315346
rdar://166727225 theguardian.com: media controls don’t disappear in full screen after scrubbing through media. It only disappears after user taps video to pause then unpause
https://bugs.webkit.org/show_bug.cgi?id=315346
Summary rdar://166727225 theguardian.com: media controls don’t disappear in full scre...
phinehas133
Reported 2026-05-22 01:17:18 PDT
[iOS] YouTube embed video does not start playing on theguardian.com
Attachments
phinehas133
Comment 1 2026-05-22 01:17:19 PDT
phinehas133
Comment 2 2026-05-22 01:22:44 PDT
EWS
Comment 3 2026-05-22 10:28:03 PDT
Committed 313743@main (21a364afcaee): <https://commits.webkit.org/313743@main> Reviewed commits have been landed. Closing PR #65466 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.